--- a/src/contents.css
+++ b/src/contents.css
@@ -4,6 +4,13 @@
   margin: 0;
   padding: 0;
   background-color: #e6edf2;
+  font-family: 'Mulish', sans-serif;
+
+}
+
+a {
+  color: #81bAb4;
+  font-weight: bolder;
 }
 
 /*MOBILE*/
@@ -28,6 +35,7 @@
   margin: auto;
   width: 50%;
   height: 5%;
+
 }
 
 .h1Bienvenida h1 {
@@ -39,8 +47,64 @@
   width: 50%;
   height: 5%;
   margin-top: 5%;
+  margin-bottom: 10%;
 }
 
 .parrafoBienvenida p {
   text-align: center;
+}
+
+.botonesIniciales {
+  display: flex;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  background-color: #81Bab4;
+  border-radius: 60px;
+  justify-content: center;
+  align-items: center;
+  font-size: 80%;
+  cursor: pointer;
+  text-transform: uppercase;
+  border: 0;
+  font-weight: bold;
+}
+
+.botonesIniciales:hover {
+  background-color: #41968D;
+  transition: all 50ms ease;
+  width: 75%;
+  height: 6%;
+}
+
+.divBotonVista1 {
+  display: flex;
+  margin: auto;
+  width: 65%;
+  height: 5%;
+  padding: 0;
+  margin-top: 3%;
+}
+
+.parrafocondiciones1 {
+  display: flex;
+  margin: auto;
+  width: 80%;
+  height: 2%;
+  padding: 0;
+  margin-top: 4%;
+  text-align: center;
+  font-size: 13px;
+}
+
+.parrafocondiciones2 {
+  display: flex;
+  margin: auto;
+  width: 80%;
+  height: 2%;
+  padding: 0;
+  text-align: center;
+  font-size: 13px;
+  color: #81Bab4;
+  text-decoration: #81bAb4;
 }
