--- a/src/contents.css
+++ b/src/contents.css
@@ -13,6 +13,15 @@ a {
   font-weight: bolder;
 }
 
+small {
+  width: 90%;
+  height: 45%;
+  text-align: left;
+  margin-left: 4%;
+  font-weight: bold;
+  margin-top: 1%;
+}
+
 /*MOBILE*/
 /*LOGO KETOLIFE*/
 .logoketolife {
@@ -80,8 +89,8 @@ a {
 .divBotonVista1 {
   display: flex;
   margin: auto;
-  width: 65%;
-  height: 5%;
+  width: 80%;
+  height: 6%;
   padding: 0;
   margin-top: 3%;
 }
@@ -107,4 +116,43 @@ a {
   font-size: 13px;
   color: #81Bab4;
   text-decoration: #81bAb4;
+}
+
+.form {
+  display: flex;
+  flex: wrap;
+  flex-direction: column;
+  margin: auto;
+  width: 80%;
+  height: 35%;
+  padding: 0;
+  text-align: center;
+  font-size: 13px;
+  margin-top: 15%;
+}
+
+.inputFormulario {
+  *margin-top: 10%;
+  border-radius: 50px;
+  border: #81Bab4 solid;
+  border-width: 4px;
+  height: 100%;
+  background-color: #ffff;
+}
+
+.letraO {
+  margin-top: 10%;
+  text-align: center;
+  width: 100%;
+  height: 2%;
+
+}
+
+.divBotonVista2 {
+  display: flex;
+  margin: auto;
+  width: 80%;
+  height: 6%;
+  padding: 0;
+  margin-top: 15%;
 }
