--- a/src/contents.css
+++ b/src/contents.css
@@ -22,6 +22,15 @@ small {
   margin-top: 1%;
 }
 
+.smallSesion {
+  width: 90%;
+  height: 7%;
+  text-align: left;
+  margin-left: 4%;
+  font-weight: bold;
+  margin-top: 1%;
+}
+
 /*MOBILE*/
 /*LOGO KETOLIFE*/
 .logoketolife {
@@ -132,7 +141,6 @@ small {
 }
 
 .inputFormulario {
-  *margin-top: 10%;
   border-radius: 50px;
   border: #81Bab4 solid;
   border-width: 4px;
@@ -156,3 +164,43 @@ small {
   padding: 0;
   margin-top: 15%;
 }
+
+.inputFormSesion{
+  border-radius: 50px;
+  border: #81Bab4 solid;
+  border-width: 4px;
+  height: 14%;
+  background-color: #ffff;
+}
+
+.congratulation {
+  margin: auto;
+  width: 100%;
+  height: 5%;
+  text-align: center;
+  margin-top: 5%;
+  color: #32324d;
+}
+
+ .welcome {
+  margin: auto;
+  margin-top: 2%;
+  text-align: center;
+  height: 15%;
+  width: 80%;
+ }
+
+ .imgLike {
+  margin: auto;
+  margin-top: 10%;
+  width: 75%;
+  height: 20%;
+ }
+
+ .divBotonVista4 {
+  display: flex;
+  margin: auto;
+  width: 80%;
+  height: 6%;
+  margin-top: 15%;
+ }
