--- a/src/contents.css
+++ b/src/contents.css
@@ -204,3 +204,13 @@ small {
   height: 6%;
   margin-top: 15%;
  }
+
+
+ .divBotonGoogle{
+    display: flex;
+    margin: auto;
+    width: 60%;
+    height: 6%;
+    margin-top: 10%;
+    border:0;
+ }
