--- a/src/contents.css
+++ b/src/contents.css
@@ -165,7 +165,7 @@ small {
   margin-top: 15%;
 }
 
-.inputFormSesion{
+.inputFormSesion {
   border-radius: 50px;
   border: #81Bab4 solid;
   border-width: 4px;
@@ -182,35 +182,57 @@ small {
   color: #32324d;
 }
 
- .welcome {
+.welcome {
   margin: auto;
   margin-top: 2%;
   text-align: center;
   height: 15%;
   width: 80%;
- }
+}
 
- .imgLike {
+.imgLike {
   margin: auto;
   margin-top: 10%;
   width: 75%;
   height: 20%;
- }
+}
 
- .divBotonVista4 {
+.divBotonVista4 {
   display: flex;
   margin: auto;
   width: 80%;
   height: 6%;
   margin-top: 15%;
- }
+}
 
 
- .divBotonGoogle{
-    display: flex;
-    margin: auto;
-    width: 60%;
-    height: 6%;
-    margin-top: 10%;
-    border:0;
- }
+.divBotonGoogle {
+  display: flex;
+  margin: auto;
+  width: 60%;
+  height: 6%;
+  margin-top: 10%;
+  border: 0;
+}
+
+.logoketolifeblanco {
+  background-color: #32324D;
+  width: 100%;
+  height: 10%;
+  position: relative;
+
+}
+
+.divimagenLogoKetoLifeBlanco {
+  background-color: #32324D;
+  width: 30%;
+  height: 50%;
+  position: absolute;
+  top: 29%;
+  left: 34%;
+}
+
+.imagenLogoKetoLifeBlanco {
+  background-color: #32324D;
+
+}
