--- a/src/contents.css
+++ b/src/contents.css
@@ -333,3 +333,29 @@ small {
   border: 0;
   font-weight: bold;
 }
+
+
+.containerPost{
+  display: flex;
+  margin: auto;
+  margin-top: 5%;
+  background-color: #81Bab4;
+  width: 70%;
+  height: 20%;
+  border: #32324d solid 1px; 
+}
+
+.titlePublicacion{
+  display: flex;
+  flex-direction: column ;
+  width: 90px;
+  height: 20px;
+
+}
+
+.descriptionPublicacion{
+  display: flex;
+  flex-direction: column;
+  width: 90px;
+  height: 20px;
+}
