--- a/src/contents.css
+++ b/src/contents.css
@@ -360,11 +360,11 @@ small {
   height: 20px;
 }
 
-.containerLike{
+ .containerLike{
   display: flex;
-  background-color: #32324d;
+  background-color: #9090c9;
   height: 20%;
-  width: 30%;
+  width: 25%;
 }
 
 .imgChef{
@@ -373,6 +373,30 @@ small {
 }
 
 .buttonLike{
-  height: 2%;
-  width: 15%;
+  height: 100%;
+  width: 70%;
 }
+
+.contador{
+  width: 60%;
+  display: flex;
+  align-items: end;
+  font-size: 130%;
+}
+
+
+/*.containerLike {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-gap: 10px;  
+}
+
+.buttonLike {
+  grid-column: 1;
+  justify-self: start;  
+}
+
+.contador p {
+  grid-column: 1;
+  justify-self: end;  
+}*/
