--- a/src/contents.css
+++ b/src/contents.css
@@ -362,13 +362,18 @@ small {
 
 /*---------Botones del contenedor post------*/
 .contenedorBotones {
+  background-color: #32324d;
+  justify-content: space-between;
   display: flex;
   flex-direction: column;
   z-index: 10;
+  margin-top: 8%;
 }
 
 .buttonDelete {
-  background-color: #81Bab4;
+  background-color: #0e3833;
+  
+  
 
 }
 
