--- a/src/contents.css
+++ b/src/contents.css
@@ -341,7 +341,7 @@ small {
   flex-direction: column;
   margin: auto;
   margin-top: 5%;
-  background-color: #81Bab4;
+  background-color: #b5d9d5;
   width: 83%;
   height: 35%;
   border-radius: 15px;
