--- a/src/contents.css
+++ b/src/contents.css
@@ -341,6 +341,7 @@ small {
   flex-direction: column;
   margin: auto;
   margin-top: 5%;
+  margin-bottom: 10%;
   background-color: #c4dcd9;
   width: 83%;
   height: 35%;
@@ -480,4 +481,10 @@ small {
   border-radius: 10px;
   border: 0;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+}
+
+.postData{
+  height: auto;  
+  display: inline-block; 
+  margin-bottom: 30% !important;
 }
