--- a/src/contents.css
+++ b/src/contents.css
@@ -219,7 +219,7 @@ small {
   background-color: #32324D;
   width: 100%;
   height: 10%;
-  position: relative;
+  position: fixed;
 
 }
 
@@ -271,8 +271,10 @@ small {
   height: 60%;
   border: solid #81Bab4 2px;
   border-radius: 10px;
-  margin: auto;
-  margin-top: 15%;
+  display:inline-block;
+  margin-top: 30%;
+  margin-bottom: 30%;
+  margin-left: 10%;
 }
 
 .divX {
@@ -414,17 +416,18 @@ small {
   margin-top: 2%;
   width: 95%;
   height: 50%;
-  overflow: auto;
+ /* overflow: auto;*/
 }
 
 .containerLike {
   display: flex;
   flex-direction: row;
   background-color:#c4dcd9;
-  height: 13%;
-  width: 20%;
+  height: 8%;
+  width: 12%;
   margin-top: 2%;
-  margin-left: 76%;
+  margin-left: 80%;
+  margin-bottom: 3%;
 }
 
 .buttonLike {
@@ -442,6 +445,7 @@ small {
 .contador {
   border: none;
   background-color: #c4dcd9;
+  margin-top: 11%;
   height: 100%;
   width: 40%;
   display: flex;
@@ -484,7 +488,8 @@ small {
 }
 
 .postData{
-  height: auto;  
+  height: 100%;  
   display: inline-block; 
   margin-bottom: 30% !important;
+  margin-top: 30%;
 }
