--- a/src/contents.css
+++ b/src/contents.css
@@ -488,7 +488,7 @@ small {
 }
 
 .postData{
-  height: 100%;  
+  height: auto;  
   display: inline-block; 
   margin-bottom: 30% !important;
   margin-top: 30%;
